# hdf5storage

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .travis.yml  COPYING.txt  MANIFEST.in  README.md  README.rst  THANKS.rst  pyproject.toml  requirements.txt  requirements_doc.txt  requirements_tests.txt  setup.cfg  setup.py
.github/workflows/: lint.yaml  linting_ruff.yaml  unit_tests.yml
doc/: Makefile  make.bat
doc/source/: Marshallers.rst  api.rst  api_for_plugins_developers.rst  api_for_users.rst  compression.rst  conf.py  core.rst  development.rst  hdf5storage.Marshallers.rst  hdf5storage.exceptions.rst  hdf5storage.lowlevel.rst  hdf5storage.pathesc.rst  hdf5storage.plugins.rst  hdf5storage.rst  hdf5storage.utilities.rst  index.rst  information.rst  introduction.rst  lowlevel.rst  paths.rst  storage_format.rst  thanks.rst  utilities.rst
examples/example_hdf5storage_marshaller_plugin/: README.rst  example_hdf5storage_marshaller_plugin.py  pyproject.toml  setup.py
hdf5storage/: Marshallers.py  __init__.py  core.py  exceptions.py  lowlevel.py  pathesc.py  plugins.py  utilities.py
src/hdf5storage/: Marshallers.py  __init__.py  exceptions.py  pathesc.py  utilities.py
tests/: asserts.py  julia_read_mat.jl  make_mat_with_all_types.m  make_randoms.py  read_write_mat.m  test_dict_like_storage_methods.py  test_empty_matrix_matlab_metadata.py  test_hdf5_filters.py  test_julia_mat_compatibility.py  test_marshaller_collection_priority.py  test_marshaller_plugins.py  test_marshallers_requiring_modules.py  test_matlab_compatibility.py  test_multi_io.py  test_ndarray_O_field.py  test_numpy_unicode_scalar_utf16_conversion.py  test_path_escaping.py  test_read_from_matlab.py  test_str_conv_utils.py  test_string_utf16_conversion.py  test_write_readback.py
