[metadata]
name = hdf5storage
version = 0.2
description = Utilities to read/write Python types to/from HDF5 files, including MATLAB v7.3 MAT files.
long_description = file: README.rst
author = Freja Nordsiek
author_email = fnordsie@posteo.net
url = https://github.com/frejanordsiek/hdf5storage
license = BSD
license_file = COPYING.txt
keywords = hdf5, matlab
classifiers =
  Programming Language :: Python :: 3 :: Only
  Development Status :: 3 - Alpha
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering
  Topic :: Database
  Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = hdf5storage
install_requires =
  setuptools
  numpy
  h5py >= 2.3
python_requires = >= 3.5
zip_safe = True

[bdist_wheel]
universal = True

[sdist]
formats = zip

[build_sphinx]
all-files = True
build-dir = doc/build
source-dir = doc/source

[tool:pytest]
minversion = 5.0
testpaths =
    tests
